--- a/ContosoUniversity/Views/Home/About.cshtml
+++ b/ContosoUniversity/Views/Home/About.cshtml
@@ -28,3 +28,29 @@
         </tr>
     }
 </table>
+
+<h2>Contact Information</h2>
+<table>
+    <tr>
+        <th>
+            Administrator
+        </th>
+        <th>
+            E-Mail Address
+        </th>
+        <th>
+            Phone
+        </th>
+    </tr>
+    <tr>
+        <td>
+            Dale Perreault
+        </td>
+        <td>
+            per15038@byui.edu
+        </td>
+        <td>
+            (210) 555-1254
+        </td>
+    </tr>
+</table>
