--- a/ContosoUniversity/Views/Home/Index.cshtml
+++ b/ContosoUniversity/Views/Home/Index.cshtml
@@ -8,20 +8,16 @@
 <div class="row">
     <div class="col-md-4">
         <h2>Welcome to Contoso University</h2>
-        <p>
-            Contoso University is a sample application that
-            demonstrates how to use Entity Framework Core in an
-            ASP.NET Core MVC web application.
-        </p>
+        <img src="~/images/university.jpeg" />
     </div>
     <div class="col-md-4">
-        <h2>Build it from scratch</h2>
-        <p>You can build the application by following the steps in a series of tutorials.</p>
-        <p><a class="btn btn-default" href="https://docs.asp.net/en/latest/data/ef-mvc/intro.html">See the tutorial &raquo;</a></p>
+        <h2>Manage Students and Enrollments</h2>
+        <p>Use the links above to adjust class and student information.</p>
+        <img src="~/images/university2.jpeg" />
     </div>
     <div class="col-md-4">
-        <h2>Download it</h2>
-        <p>You can download the completed project from GitHub.</p>
-        <p><a class="btn btn-default" href="https://github.com/aspnet/Docs/tree/master/aspnetcore/data/ef-mvc/intro/samples/cu-final">See project source code &raquo;</a></p>
+        <h2>Support</h2>
+        <p>Contact the administrator if you encounter any issues.</p>
+        <img src="~/images/university3.jpeg" />
     </div>
 </div>
