--- a/ContosoUniversity/wwwroot/css/site.css
+++ b/ContosoUniversity/wwwroot/css/site.css
@@ -1,6 +1,12 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
+    font-family: 'Barlow Condensed', sans-serif;
+    background-color: lightblue;
+}
+
+.jumbotron {
+    background-color: azure;
 }
 
 /* Wrapping element */
@@ -8,6 +14,11 @@
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
+}
+
+.navbar {
+    background-color: maroon;
+    color: azure;
 }
 
 /* Carousel */
@@ -18,6 +29,15 @@
 
 /* Make .svg files in the carousel display properly in older browsers */
 .carousel-inner .item img[src$=".svg"] {
+    width: 100%;
+}
+
+th,td {
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+img[src$=".jpeg"] {
     width: 100%;
 }
 
